--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
   </body>
 </html>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<!-- Add previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<!-- Take screenshots of project previews and add the images to the images folder -->
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+<!-- Add titles/subtitles etc. -->
 
-<!-- TODO 5: Add a link to the project pages -->
+<!-- Add a link to the project pages -->
 
 <!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+HINT for TODO 6: Use the height attribute set to 200 to make the image smaller:
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!-- Add the Contact Me and About Me page links -->
